# ESP32-Weather

./: README.md
.github/workflows/: docker-publish-backend.yml  docker-publish-frontend.yml
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 149860f5b46d_add_settings_table.py  6f29d4eb610f_inital_migration.py  77dbd20ff606_seed_default_settings.py  c1a0a7a6639e_initial_migration.py  c55819ad3bfe_create_default_admin_user.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/endpoints/: api_keys.py  auth.py  devices.py  esp32_weather.py  health.py  settings.py  users.py  weather.py  web_weather.py
backend/app/core/: config.py
backend/app/db/: init_db.py  session.py
backend/app/models/: __init__.py  api_key.py  device.py  setting.py  user.py  weather_reading.py
backend/app/schemas/: api_key.py  device.py  setting.py  timestamp.py  user.py  weather_reading.py
backend/app/services/: api_key.py  auth.py  device.py  setting.py  user.py  weather_reading.py
backend/app/utils/: weather_reading.py
backend/scripts/: create_admin.py  entrypoint.sh  healthcheck.py  init_admin.py  init_settings.py  send_mock_readings.py
backend/tests/: conftest.py  test_api_keys.py  test_devices.py  test_esp32_weather.py
examples/: .env.example  docker-compose.yml
frontend/: Dockerfile  entrypoint.sh  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json
frontend/src/: App.vue  global.d.ts
(+42 files in other folders)
